--- a/main.css
+++ b/main.css
@@ -1,28 +1,193 @@
+
+/* img {
+  display: block;
+} */
+
+.site_heder {
+  width: 100%;
+}
+.nav {
+  display: inline-block;
+  
+
+}
 .list {
-  list-style-type: none;
+  display: inline-block;
+
+}
+.list_item {
+  display: inline;
 }
 .item_link {
-  text-decoration-line:none;
+  text-decoration-line: none;
   font-size: 18px;
+  color: #1f153480;
 }
-.wraper-text {
-  width: 440px;
+.home {
+  color: #1F1534;
 }
 .hero_title {
   font-size: 48px;
 }
-
-.hero_link {
-  text-decoration-line:none;
-  border-radius: 55px;
-  background-color: #458FF6;
-  color:#fff;
+.title_desc {
+  font-size: 21px;
+  color:#7D7987;
 }
-
-.line {
-  
+.hero_link {
+  text-decoration-line: none;
+  color: #fff;
+  background-color:#458FF6;
+  border-radius: 55px;
+  padding: 16px 35px;
+}
+.wraper-text {
   display: inline-block;
+  width: 440px;
+}
+.wrapper_services_text {
+  width: 952px;
+  text-align: center;
+}
+.line {
+  display: inline-block;
+  background-color: #000;
   width: 56px;
   height: 2px;
-  background-color:#000;
+
+
+  
+}
+
+.types_list {
+  display: inline-block;
+  width: 380px;
+}
+.types_list_name {
+  font-size: 24px;
+}
+.name_desc {
+  color: #7D7987;
+}
+.services_link {
+  display: block;
+  border-radius: 55px;
+  border: 1.4px solid #458FF6;
+  width: 200px;
+  padding: 16px 0;
+  margin: 0 auto;
+  text-decoration-line: none;
+  color: #458FF6;
+  font-size: 18px;
+  text-align: center; 
+
+}
+
+.wrapper_about_title {
+  display: inline-block;
+  width: 435px;
+}
+.about_title {
+  font-size: 36px;
+}
+.about_title_desc {
+  color: #7d7987;
+  font-size: 18px;
+}
+
+.aside_inner {
+  text-align: center;
+  width: 1180px;
+  background-color:#67C3F3;
+}
+.aside_title {
+  color: #fff;
+}
+
+.aside_line {
+  background-color: #fff;
+}
+.aside_img {
+  display: block;
+  border-radius:50%;
+}
+.worker_name {
+  color: #fff;
+  font-size: 22px;
+}
+.worker {
+  font-size: 18px;
+  color: #ffffffe6;
+}
+.worker_words {
+  display: inline-block;
+  width: 403px;
+  color: #ffffffe6;
+  font-size: 19px;
+}
+.check_title {
+  text-align: center;
+}
+.check_line {
+  display: block;
+  margin: 0 auto;
+
+}
+.check_list {
+  list-style: none;
+}
+.check_item {
+  width: 380px;
+  display: inline-block;
+}
+.check_item_link {
+  text-decoration-line: none;
+  color: #4088ed;
+  font-size: 17px;
+}
+.more {
+  display: block;
+  text-decoration-line: none;
+  font-size: 18px;
+  width: 200px;
+  padding: 16px 0;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 55px;
+  color: #458ff6;
+  border: 1.4px solid #458FF6;
+
+ 
+
+}
+.site_footer {
+  background-color:#67C3F3;
+  color:#fff;
+
+
+}
+.footer_inner {
+  display: inline-block;
+  width: 386px;
+}
+.footer_list {
+  display: inline-block;
+  list-style: none;
+}
+.type_list {
+  list-style: none;
+
+
+}
+.footer_item {
+  display: inline-block;
+}
+
+
+.type_item {
+  font-size: 18px;
+  
+}
+.footer_item_title {
+  font-size: 20px;
+  
 }
