--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
-
 * {
   box-sizing: border-box;
 }
 body {
   margin: 0;
+  font-family: "Mulish","Arial", sans-serif;
+}
+img {
+  display: block;
 }
 .container {
   width: 1200px;
@@ -29,6 +32,8 @@ body {
 .sitenav-list {
   display: inline-block;
   padding-left: 0;
+  margin-block: 0;
+
 }
 .sitenav_item {
   margin-right:40px;
@@ -44,35 +49,44 @@ body {
 }
 .home {
   color: #1F1534;
+  font-weight: 700;
 }
 .hero {
   padding: 75px 0 200px ;
 }
 .hero-inner {
   display: flex;
-  align-items:center;
+
   justify-content: space-between;
 }
 .hero_title {
   margin: 0 0 30px;
   font-size: 48px;
+  line-height: 56px;
+  font-weight: 700;
 
 }
 .title_desc {
   margin: 0 0 40px;
   font-size: 21px;
   color:#7D7987;
+  font-weight: 300;
+  line-height: 32px;
 }
 .hero_link {
   display: inline-block;
   text-decoration-line: none;
   color: #fff;
   background-color:#458FF6;
+  font-size: 18px;
   border-radius: 55px;
   padding: 16px 35px;
+  font-weight: 700;
 }
 .more_desc {
   margin: 0 auto;
+  font-weight: 700;
+  font-size: 18px;
 }
 .wraper-text {
   display: inline-block;
@@ -94,24 +108,41 @@ body {
 }
 .prdered_list {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   padding-left: 0;
 }
 .services {
   padding-bottom: 28px;
 }
+.services_title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 56px;
+  margin: 0 0 26px;
+}
+.services_title_desc {
+  color: #7d7987;
+  font-weight: 300;
+  line-height: 30px;
+  
+}
 
 .types_list {
-  display: inline-block;
+  list-style: none;
   padding: 68px 59px 48px 41px;
   margin-bottom: 40px;
   width: 380px;
 }
 .types_list_name {
   font-size: 24px;
+  font-weight: 700;
+  line-height: 56px;  
 }
 .name_desc {
-  color: #7D7987;
+  color: #7d7987;
+  font-weight: 300;
+  line-height: 28px;
 }
 .services_link {
   display: block;
@@ -119,11 +150,12 @@ body {
   border: 1.4px solid #458FF6;
   width: 200px;
   padding: 16px 0;
-  
   text-decoration-line: none;
   color: #458FF6;
   font-size: 18px;
   text-align: center; 
+  font-size: 18px;
+  font-weight: 700;
 
 }
 .about {
@@ -147,6 +179,10 @@ body {
 }
 .about_title {
   font-size: 36px;
+  font-weight: 700;
+  line-height: 56px;
+  margin: 0 0 30px;
+  line-height: 48px;
 }
 .about-line {
   margin-bottom: 32px;
@@ -154,7 +190,9 @@ body {
 .about_title_desc {
   color: #7d7987;
   font-size: 18px;
-  margin-bottom: 40px;
+  margin:0 0 40px;
+  font-weight: 300;
+  line-height: 30px;
 }
 .aside {
   padding-bottom: 200px;
@@ -172,6 +210,8 @@ body {
   font-size: 36px;
   margin: 0 0 34px;
   text-align: center;
+  font-weight: 700;
+  line-height: 48px;
 }
 
 .aside_line {
@@ -194,17 +234,15 @@ body {
   display: flex;
   align-items:center;
 }
-.wrapper-worker-name {
-  
-}
+
 .wrapper-worker-words {
-  
   width: 403px;
 }
 .worker_name {
   color: #fff;
   font-size: 22px;
   margin: 0 0 5px;
+  font-weight: 700;
 }
 .worker {
   font-size: 18px;
@@ -214,6 +252,7 @@ body {
 .worker_words {
   color: #ffffffe6;
   font-size: 19px;
+  line-height: 30px;
 }
 
 .wrapper-chech-title {
@@ -226,6 +265,8 @@ body {
   text-align: center;
   font-size: 36px;
   margin: 0 0 30px;
+  font-weight: 700;
+  line-height: 56px; 
 }
 .check_line {
   display: inline-block;
@@ -245,19 +286,21 @@ body {
   width: 380px;
   display: inline-block;
 }
-.item_img {
-  
-}
+
 .wrapper_item_title {
   margin: 30px;
 }
 .item_title {
   font-size: 21px;
   margin: 0 0 10px;
+  font-weight: 700;
+  line-height: 32px;
 }
 .item_title_desc {
   color: #7d7987;
   margin: 0 0 18px;
+  font-weight: 300;
+  line-height: 28px;
 }
 .check_item_link {
   text-decoration-line: none;
@@ -276,6 +319,7 @@ body {
   border-radius: 55px;
   color: #458ff6;
   border: 1.4px solid #458FF6;
+  font-weight: 700;
 
  
 
@@ -311,6 +355,8 @@ justify-content: space-between;
 }
 .footer_text {
   margin: 0 0 31px;
+  font-weight: 300;
+  line-height: 28px;
 
 }
 .type_list {
@@ -319,19 +365,22 @@ justify-content: space-between;
 
 
 }
-.footer_item {
- 
+.ltd {
+  color: #FFF;
+  font-weight: 300;
+  line-height: 28px; 
 }
-
 
 
 .type_item {
   font-size: 18px;
   margin: 0 0 10px;
+  font-weight: 300;
   
 }
 .footer_item_title {
   display: inline-block;
   font-size: 20px;
   margin: 0 0 20px;
+  font-weight: 700;
 }
